# proxybox-free

./: .gitignore  README.md  eslint.config.js  index.html  install.sh  package-lock.json  package.json  style.md  user.md  vite.config.js
docs/: API.md  fb-intro-post.md
public/: robots.txt  sitemap.xml
rust-core/: Cargo.toml  README.md
rust-core/.cargo/: config.toml
rust-core/src/: main.rs
scripts/: backup.sh  bench.sh  healthcheck.sh  restore.sh  seed-config.mjs  setup-ubuntu22.sh  test-e2e.sh
server/: _docs_en.mjs  agent.js  index.js  oauth.js  virtualizor.js
src/: App.vue  main.js  router.js  styles.css  theme.js
src/api/: index.js
src/components/: BroadcastBanner.vue  CountryFlag.vue  NotificationBell.vue  OnboardingTour.vue  PublicTopNav.vue  SpeedGauge.vue
src/data/: aup.js  catalog.js
src/i18n/: en.js  index.js  vi.js
src/layouts/: AppLayout.vue  CustomerLayout.vue
src/store/: nodes.js  profile.js  proxies.js
src/utils/: format.js
src/views/: AcceptableUseView.vue  ApiView.vue  AuthView.vue  ChangelogView.vue  CustomerView.vue  DashboardView.vue  FaqView.vue  ForgotPasswordView.vue  LandingView.vue  MarketplaceView.vue  NodeDetailView.vue  NodesView.vue  OrderDetailView.vue  OrdersView.vue  ProfileView.vue  PublicApiDocsView.vue  PublicPricingView.vue  ResetPasswordView.vue  SettingsView.vue  StatusView.vue  VerifyEmailView.vue
src/views/admin/: AdminAnnouncementsView.vue  AdminApiKeyRotateView.vue  AdminAuditView.vue  AdminBandwidthView.vue  AdminConnectionDetailView.vue  AdminConnectionsView.vue  AdminCouponsView.vue  (+20 more)
(+17 files in other folders)
